Added additional recipes for baked potato, Potato and leek soup and stuffed peppers.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 	<ul>
 		<li><a href="./recipes/cilantroLimeRice.html">Cilantro Lime Rice</a></li>
-		<li></li>
-		<li></li>
+		<li><a href="./recipes/bakedPotato.html">Long way around Baked Potatos</a></li>
+		<li><a href="./recipes/potatoLeekSoup.html">Potato and Leek Soup</a></li>
+		<li><a href="./recipes/stuffedPeppers.html">Stufffed Peppers</a></li>
 		<li></li>
 		<li></li>
 	</ul>
